[package]
name = "axum-sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.3.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.1.1", features = ["full"] }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
], default-features = false }
dotenv = "0.15"
thiserror = "1.0.30"
