[package]
name = "axum-sea-orm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.3.4", features = ["headers"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.68"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower-http = { version = "0.1.2", features = ["full", "cors"] }
sea-orm = { version = "^0", features = [
  "sqlx-postgres",
  "runtime-tokio-native-tls",
  "macros",
], default-features = false }
dotenv = "0.15"
thiserror = "1.0.30"
tower = { version = "0.4.11", features = ["full"] }
anyhow = "1.0.45"
jsonwebtoken = "7.2.0"
chrono = "0.4.19"
lazy_static = "1.4"
headers = "0.3.5"
